add api routes of must have features