@@ -1,6 +1,5 @@
 package com.splitwise.server.controller;
 
-import com.splitwise.server.dto.LoginRequest;
 import com.splitwise.server.model.User;
 import com.splitwise.server.service.UserService;
 import jakarta.servlet.http.HttpSession;
@@ -11,6 +10,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.Map;
 
 @RestController
@@ -27,7 +27,6 @@ public class AuthController {
 
     @PostMapping("/register")
     public ResponseEntity<User> registerUser(@RequestBody User user) {
-        System.out.println("Received password: " + user.getPassword());
         User newUser = userService.registerUser(user);
         return ResponseEntity.ok(newUser);
     }
@@ -46,10 +45,7 @@ public class AuthController {
                     new UsernamePasswordAuthenticationToken(email, password)
             );
 
-            // Store authentication in SecurityContext
             SecurityContextHolder.getContext().setAuthentication(auth);
-
-            // Attach Spring Security context to session
             session.setAttribute("SPRING_SECURITY_CONTEXT", SecurityContextHolder.getContext());
 
             return ResponseEntity.ok(Map.of("message", "Login Successful", "user", auth.getName()));
@@ -59,22 +55,21 @@ public class AuthController {
     }
 
 
-
     @GetMapping("/status")
     public ResponseEntity<?> checkAuthStatus() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication != null && authentication.isAuthenticated()
-                && !"anonymousUser".equals(authentication.getPrincipal())) {
-            return ResponseEntity.ok(Map.of("message", "Authenticated", "user", authentication.getName()));
+
+        if (authentication == null || !authentication.isAuthenticated() || "anonymousUser".equals(authentication.getPrincipal())) {
+            return ResponseEntity.ok(Collections.singletonMap("message", "Not authenticated"));
         }
-        return ResponseEntity.ok(Map.of("message", "Not authenticated", "user", null));
+
+        return ResponseEntity.ok(Map.of("message", "Authenticated", "user", authentication.getName()));
     }
 
     @PostMapping("/logout")
     public ResponseEntity<?> logout(HttpSession session) {
-        session.invalidate(); // Destroy session
-        SecurityContextHolder.clearContext(); // Clear Spring Security authentication
-
-        return ResponseEntity.ok(Map.of("message", "Logged Out Successfully", "user", null));
+        session.invalidate();
+        SecurityContextHolder.clearContext();
+        return ResponseEntity.ok(Collections.singletonMap("message", "Logged Out Successfully"));
     }
 }
